add unordered list

--- a/vard.html
+++ b/vard.html
@@ -3,8 +3,18 @@
 <head>
 <title>minkle</title>
 </head>
-<body style color:red;>
+<body style =" color: red;">
 <h1>this is my website</h1>
+   an unordered list:
+   <ul> 
+   <li>third item</li>
+   </ul>
+   an ordered list :
+   <ol >
+     <li style ="color: red;">fisrt item</li>
+     <li style ="color: yellow;">second item</li>
+     <li style ="color: blue;" >third item </li> 
+      </ol>
 my name is minkle
 </body>
 </html>
