--- a/vard.html
+++ b/vard.html
@@ -2,6 +2,12 @@
 <html lan ="en">
 <head>
 <title>minkle</title>
+<style>
+  h1 {
+      color: blue;
+
+  }
+  </style>
 </head>
 <body style =" color: red;">
 <h1>this is my website</h1>
